# MAF_Microsoft_Agent_Framework

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  LEARNING_PATH.md  MAF_CONCEPTS.md
docs/screenshots/: README.md
scripts/: run.ps1  run.sh  setup.ps1  setup.sh  test.ps1  test.sh
src/maf_lab/: __init__.py  api.py  cli.py  config.py  demo_engine.py  domain.py  maf_engine.py  policy.py  repository.py  service.py
src/maf_lab/static/: app.js  index.html  styles.css
tests/: test_api.py  test_maf_structure.py  test_policy.py  test_repository.py
