[build-system]
requires = ["setuptools>=75,<82"]
build-backend = "setuptools.build_meta"

[project]
name = "maf-learning-platform"
version = "0.1.0"
description = "A runnable learning platform for Microsoft Agent Framework workflows, checkpoints and human-in-the-loop patterns."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }
authors = [{ name = "Satinder Sandhoo" }]
dependencies = [
  "agent-framework-core==1.8.1",
  "agent-framework-openai==1.8.1",
  "fastapi==0.128.2",
  "uvicorn[standard]==0.48.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
]

[project.scripts]
maf-lab = "maf_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
maf_lab = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"

[tool.coverage.run]
source = ["maf_lab"]
omit = ["src/maf_lab/maf_engine.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 75
